# stock-transform

./: README.md  README.rst
stock-transform/: README.md  README.rst  pyproject.toml
stock-transform/stock_transform/: __init__.py  stock_preprocess.py
stock-transform/tests/: test_stock_transform.py
